[gd_scene load_steps=3 format=3 uid="uid://dsilbemx43yk7"]

[ext_resource type="PackedScene" uid="uid://bi05ox1w0hedq" path="res://scenes/item_slot.tscn" id="1_4yniw"]
[ext_resource type="Script" uid="uid://dypq3vw302jol" path="res://scripts/crafting_recipe_scene.gd" id="1_ti6cu"]

[node name="CraftingRecipeScene" type="Control"]
custom_minimum_size = Vector2(360, 40)
layout_mode = 3
offset_right = 360.0
offset_bottom = 40.0
script = ExtResource("1_ti6cu")

[node name="ResultItemSlot" parent="." instance=ExtResource("1_4yniw")]
unique_name_in_owner = true
layout_mode = 0

[node name="Label" type="Label" parent="."]
layout_mode = 0
offset_left = 40.0
offset_right = 80.0
offset_bottom = 40.0
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 4
theme_override_font_sizes/font_size = 24
text = "<="
horizontal_alignment = 1
vertical_alignment = 1

[node name="IngredientGridContainer" type="GridContainer" parent="."]
unique_name_in_owner = true
layout_mode = 0
offset_left = 80.0
offset_right = 360.0
offset_bottom = 40.0
columns = 8

[connection signal="mouse_clicked_to_move" from="ResultItemSlot" to="." method="_on_result_item_slot_mouse_clicked_to_move"]
